--- a/popup.css
+++ b/popup.css
@@ -1,3 +1,34 @@
+body {
+    font-size: 15px;
+    font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Apple Legacy Chevron","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
 #videoTitle a {
-    margin-right: 20px;
+    margin-right: 5px;
+}
+
+#refreshBtn {
+    -moz-box-shadow:inset 0px 34px 0px -15px #b54b3a;
+    -webkit-box-shadow:inset 0px 34px 0px -15px #b54b3a;
+    box-shadow:inset 0px 34px 0px -15px #b54b3a;
+    background-color:#a73f2d;
+    border:1px solid #241d13;
+    display:inline-block;
+    color:#ffffff;
+    /*font-family:Arial;*/
+    /*font-weight:bold;*/
+    font-size: 15px;
+    text-decoration:none;
+    text-shadow:0px -1px 0px #7a2a1d;
+}
+
+#refreshBtn:hover {
+    background-color:#b34332;
+}
+
+#graphContainer {
+    min-width: 400px;
+    width: 100%;
+    height: 200px;
+    margin: 15px auto;
 }
